--- a/default.conf.template
+++ b/default.conf.template
@@ -5,9 +5,9 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-  location ttyd {
+  location /ttyd {
           proxy_redirect off;
-          proxy_pass http://127.0.0.1:65520;
+          proxy_pass http://127.0.0.1:8011;
           proxy_http_version 1.1;
           proxy_set_header Upgrade $http_upgrade;
           proxy_set_header Connection "upgrade";
