--- a/default.conf.template
+++ b/default.conf.template
@@ -5,7 +5,7 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-    location $WS_PATH {
+    location /ttyd {
           proxy_redirect off;
           proxy_pass http://127.0.0.1:8011;
           proxy_http_version 1.1;
