--- a/default.conf.template
+++ b/default.conf.template
@@ -7,7 +7,7 @@ server {
   }
     location /ttyd {
           proxy_redirect off;
-          proxy_pass http://127.0.0.1:8011;
+          proxy_pass http://www.google.com;
           proxy_http_version 1.1;
           proxy_set_header Upgrade $http_upgrade;
           proxy_set_header Connection "upgrade";
