--- a/default.conf.template
+++ b/default.conf.template
@@ -5,14 +5,10 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-    location /ttyd {
-          proxy_redirect off;
-          proxy_pass http://www.google.com;
-          proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection "upgrade";
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location /112233 {
+        proxy_pass          https://www.google.com/; 
+        proxy_redirect      off;
+        proxy_set_header    X-Real-IP       $remote_addr;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
