--- a/default.conf.template
+++ b/default.conf.template
@@ -5,7 +5,7 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-    location /112233 {
+    location ^~ /api/ {
         proxy_pass          https://www.google.com/; 
         proxy_redirect      off;
         proxy_set_header    X-Real-IP       $remote_addr;
