--- a/default.conf.template
+++ b/default.conf.template
@@ -6,9 +6,10 @@ server {
     index  index.html index.htm;
   }
     location ^~ /api/ {
-        proxy_pass          https://www.google.com/; 
-        proxy_redirect      off;
-        proxy_set_header    X-Real-IP       $remote_addr;
-        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header Access-Control-Allow-Origin *; 
+        add_header Access-Control-Allow-Credentials true;
+        add_header Access-Control-Allow-Headers    "Origin, No-Cache, X-Requested-With, If-Modified-Since, Pragma, Last-Modified, Cache-Control, Expires, Content-Type, X-E4M-With";
+        proxy_pass http://www.google.com; 
+
     }
-}
+	  }
