--- a/default.conf.template
+++ b/default.conf.template
@@ -5,11 +5,7 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-    location ^~ /api/ {
-        add_header Access-Control-Allow-Origin *; 
-        add_header Access-Control-Allow-Credentials true;
-        add_header Access-Control-Allow-Headers    "Origin, No-Cache, X-Requested-With, If-Modified-Since, Pragma, Last-Modified, Cache-Control, Expires, Content-Type, X-E4M-With";
-        proxy_pass http://www.google.com; 
-
+    location /api {
+        proxy_pass https://www.google.com;
     }
-	  }
+}
