--- a/default.conf.template
+++ b/default.conf.template
@@ -6,6 +6,6 @@ server {
     index  index.html index.htm;
   }
     location /api/ {
-        proxy_pass http://127.0.0.1:8088;
+        proxy_pass http://127.0.0.1:8088/;
     }
 }
