--- a/default.conf.template
+++ b/default.conf.template
@@ -5,7 +5,7 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-    location ~/api/ {
-        proxy_pass http://127.0.0.1:8088;
+    location ~/112233/ {
+        proxy_pass https://www.google.com;
     }
 }
