--- a/default.conf.template
+++ b/default.conf.template
@@ -5,7 +5,7 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
   }
-    location ~/112233/ {
+    location /112233/ {
         proxy_pass https://www.google.com;
     }
 }
