--- a/app.json
+++ b/app.json
@@ -3,25 +3,6 @@
   "description": "using Docker",
   "repository": "https://github.com/history2/heroku-docker-nginx",
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c5/Nginx_logo.svg",
+  "keywords": ["ttyd", "docker", "proxy"],
   "stack": "container"
-  "keywords": [
-    "v2ray"
-  ],
-  "env": {
-    "PROTOCOL": {
-      "description": "协议vmess或vless",
-      "value": "vmess",
-      "required": true
-    },
-    "UUID": {
-      "description": "用户的主ID, uuidgenerator.net",
-      "value": "",
-      "required": false
-    },
-    "WS_PATH": {
-      "description": "websocket路径",
-      "value": "/ray",
-      "required": true
-    }
-  }
 }
