--- a/default.conf.template
+++ b/default.conf.template
@@ -14,7 +14,7 @@ proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_pass http://127.0.0.1:9999/$1;
 }
-  location /ray {
+  location /fanqiang {
           proxy_redirect off;
           proxy_pass http://127.0.0.1:23323;
           proxy_http_version 1.1;
